--- a/printer.cfg
+++ b/printer.cfg
@@ -23,7 +23,7 @@
 ## Fine tune E steps                    [extruder] section
 
 [virtual_sdcard]
-path: /home/klipper/printer_data/gcodes
+path: /home/orangepi/printer_data/gcodes
 
 [display_status]
 
@@ -32,18 +32,40 @@ path: /home/klipper/printer_data/gcodes
 [respond]
 
 [mcu]
-canbus_uuid=ff21587f5654
+canbus_uuid=d46288cd2e4e
 
-# [mcu EBB]
-# canbus_uuid=3b88c80b3088
+[mcu EBB]
+canbus_uuid=cc3a5535e1ee
+
+[temperature_sensor EBB_NTC]
+sensor_type: Generic 3950
+sensor_pin: EBB: PA2
+
+[adxl345]
+cs_pin: EBB: PB12
+spi_software_sclk_pin: EBB: PB10
+spi_software_mosi_pin: EBB: PB11
+spi_software_miso_pin: EBB: PB2
+axes_map: z,-y,x
+
+[resonance_tester]
+probe_points: 100, 100, 20
+accel_chip: adxl345
 
 [printer]
 kinematics: corexy
 max_velocity: 300
-max_accel: 3000             #Max 4000
+max_accel: 6000             #Max 4000
 max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: .05
+minimum_cruise_ratio: 0
+
+[input_shaper]
+shaper_type_x = mzv
+shaper_freq_x = 60
+shaper_type_y = mzv
+shaper_freq_y = 45
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -59,7 +81,7 @@ enable_pin: !PA0
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: PG6 #EBB:PB6
+endstop_pin: EBB:PB6
 position_min: 0
 position_endstop: 350
 position_max: 350
@@ -190,9 +212,9 @@ stealthchop_threshold: 0
 #   Extruder
 #####################################################################
 [extruder]
-step_pin: PG0 #EBB: PD0
-dir_pin: PG1 # EBB: PD1
-enable_pin: PF15 #!EBB: PD2
+step_pin: EBB: PD0
+dir_pin: EBB: PD1
+enable_pin: !EBB: PD2
 
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
@@ -209,11 +231,11 @@ max_extrude_only_distance: 200
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-heater_pin: PA2 #EBB:PB13
+heater_pin: EBB:PB13
 sensor_type: Generic 3950
-sensor_pin: PF4 #EBB:PA3
+sensor_pin: EBB:PA3
 min_temp: -100
-max_temp: 270
+max_temp: 300
 max_power: 1.0
 min_extrude_temp: 10
 #control = pid
@@ -221,12 +243,12 @@ min_extrude_temp: 10
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.080
+pressure_advance: 0.069
 ##  Default is 0.040, leave stock
 #pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
-uart_pin: PD11 #EBB: PA15
+uart_pin: EBB: PA15
 interpolate: false
 run_current: 0.5
 sense_resistor: 0.110
@@ -255,7 +277,7 @@ max_temp: 120
 ##  Inductive Probe
 ##  This probe is not used for Z height, only Quad Gantry Leveling
 [probe]
-pin: PG15 #EBB:PC13
+pin: EBB:PC13
 x_offset: 0
 y_offset: 25.0
 z_offset: 0
@@ -285,7 +307,7 @@ algorithm: bicubic
 
 ##  Print Cooling Fan - FAN0
 [fan]
-pin: PA8 #EBB:PA1
+pin: EBB:PA1
 kick_start_time: 0.5
 ##  Depending on your fan, you may need to increase this value
 ##  if your fan will not start. Can change cycle_time (increase)
@@ -295,7 +317,7 @@ off_below: 0.10
 
 ##  Hotend Fan - FAN1
 [heater_fan hotend_fan]
-pin: PE5 #EBB:PA0
+pin: EBB:PA0
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
@@ -368,6 +390,27 @@ retries: 5
 retry_tolerance: 0.0075
 max_adjust: 10
 
+
+[output_pin caselight1]
+pin: PB10
+#max_power: 1.0
+#kick_start_time: 0.5
+pwm: true
+shutdown_value: 0
+value: 0
+cycle_time: 0.01
+scale: 100
+
+[output_pin caselight2]
+pin: PB11
+#max_power: 1.0
+#kick_start_time: 0.5
+pwm: true
+shutdown_value: 0
+value: 0
+cycle_time: 0.01
+scale: 100
+
 ########################################
 # EXP1 / EXP2 (display) pins
 ########################################
@@ -414,6 +457,9 @@ initial_GREEN: 0.5
 initial_BLUE: 0.0
 color_order: RGB
 
+[neopixel hotend_rgb]
+pin: EBB:PD3
+
 #  Set RGB values on boot up for each Neopixel.
 #  Index 1 = display, Index 2 and 3 = Knob
 [delayed_gcode setdisplayneopixel]
@@ -450,6 +496,7 @@ gcode:
     {% set BED_TEMP = params.BED_TEMP|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|float %}
 
+    BED_MESH_PROFILE LOAD="default"
     M140 S{BED_TEMP}            
     
     G90
@@ -461,7 +508,9 @@ gcode:
     QUAD_GANTRY_LEVEL
     PARK     
            
-    M109 S{EXTRUDER_TEMP}       
+    M109 S{EXTRUDER_TEMP}
+
+    G28       
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -498,7 +547,7 @@ gcode:
 description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_BASE
 gcode:
-  TURN_OFF_HEATERS
+  PRINT_END
   CANCEL_PRINT_BASE
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
@@ -506,24 +555,27 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 20.804
-#*# pid_ki = 0.925
-#*# pid_kd = 117.026
+#*# pid_kp = 19.397
+#*# pid_ki = 0.829
+#*# pid_kd = 113.473
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 59.947
-#*# pid_ki = 3.005
-#*# pid_kd = 298.986
+#*# pid_kp = 58.951
+#*# pid_ki = 3.095
+#*# pid_kd = 280.755
+#*#
+#*# [stepper_z]
+#*# position_endstop = 1.045
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.047500, 0.003750, 0.006250, -0.011250, -0.043750
-#*# 	-0.042500, -0.016250, -0.021250, -0.040000, -0.070000
-#*# 	-0.027500, 0.010000, 0.000000, -0.022500, -0.045000
-#*# 	-0.006250, 0.035000, 0.021250, -0.000000, -0.017500
-#*# 	-0.037500, 0.003750, -0.007500, -0.018750, -0.032500
+#*# 	  -0.023750, 0.018750, 0.017500, 0.000000, -0.027500
+#*# 	  -0.037500, -0.013750, -0.023750, -0.041250, -0.061250
+#*# 	  -0.032500, 0.005000, 0.000000, -0.021250, -0.036250
+#*# 	  -0.007500, 0.032500, 0.026250, 0.006250, -0.006250
+#*# 	  -0.022500, 0.017500, 0.013750, -0.000000, -0.017500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -534,6 +586,3 @@ gcode:
 #*# max_x = 310.0
 #*# min_y = 40.0
 #*# max_y = 310.0
-#*#
-#*# [stepper_z]
-#*# position_endstop = 0.925
